--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:seed": "ts-node prisma/seed.ts",
     "seed:knowledge": "ts-node -r tsconfig-paths/register src/scripts/seed-knowledge-base.ts"
   },
